@@ -1,3 +1,8 @@
+2011-09-07  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/parse.c (parse_sum_expression): Simply construction of summation
+	action table.
+
 2011-09-06  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* configure.in: cairo_ps_surface_set_eps is only supported by cairo
